# hr-agent-mcp

./: .env.example  .gitignore  DEMO.md  EVALS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: graph.py
app/: main.py
core/: bq.py
data/politicas/: banco-de-horas.md  home-office.md  politica-de-ponto.md
docs/superpowers/plans/: 2026-07-11-hr-agent-mcp.md
docs/superpowers/specs/: 2026-07-10-hr-agent-mcp-design.md
etl/: __main__.py  extract.py  load.py  pipeline.py  transform.py
evals/: dataset.py  harness.py  resultados.json  run.py  scorers.py
mcp_server/: analytics.py  db.py  server.py
rag/: index.py
tests/: test_agent_helpers.py  test_analytics.py  test_evals_dataset.py  test_extract.py  test_load.py  test_mcp_db.py  test_rag.py  test_transform.py
