[project]
name = "hr-agent-mcp"
version = "0.1.0"
description = "Agente conversacional de RH com MCP, LangGraph, RAG e BigQuery"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.10",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-community>=0.3.10",
    "mcp>=1.2.0",
    "faiss-cpu>=1.8.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "faker>=30.0",
    "google-cloud-bigquery>=3.25",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["core", "etl", "mcp_server", "rag", "agent", "app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
